--- a/my.css
+++ b/my.css
@@ -12,8 +12,8 @@
 }*/
 
 @font-face {
-    font-family: Helvetica Custom; /* Гарнитура шрифта */
-    src: url(/static/HelveticaNeueCyr-UltraLight.otf); /* Путь к файлу со шрифтом */
+    font-family: Helvetica Custom;
+    src: url(/static/HelveticaNeueCyr-UltraLight.otf);
 }
 
 .img {
@@ -36,7 +36,6 @@
 }
 
 .maintext {
-    /*font-family: "Helvetica Neue";*/
     font-family: "Helvetica Custom";
     text-align: center;
     padding-top: 10vh;
@@ -55,6 +54,7 @@
     font-family: "Helvetica Custom";
     font-weight: 700;
     font-size: 20px;
+    margin-top: 5px;
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -84,10 +84,19 @@
     font-weight: 100;
 }
 
+.followers-icons {
+    height: 50px;
+    transition: height .5s;
+}
+
+.followers-icons:hover {
+    height: 60px;
+}
+
 .products-block {
     margin-top: -20px;
     width: 100vw;
-    height: 1000px;
+    height: 600px;
 }
 
 .products-header {
@@ -115,12 +124,18 @@
 .products-icon {
     height: 150px;
     margin-top: 60px;
+    transition: height .5s;
+}
+
+.products-icon:hover {
+    height: 180px;
 }
 
 .products-text {
     font-family: "Helvetica Custom";
     text-align: center;
     font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .saying-block {
@@ -142,12 +157,13 @@
 }
 
 .saying-text {
-    font-family: "Helvetica Neue";
+    font-family: "Helvetica Custom";
     font-weight: 300;
     font-size: 20px;
 }
 
 .comp-block {
+    height: 500px;
 }
 
 .comp-icon {
@@ -155,4 +171,94 @@
     text-align: center;
     margin-top: 60px;
     color: rgb(139,69,19);
+}
+
+.personal-block{
+    height: 150px;
+    background-color: rgba(211, 211, 211, 0.4);
+    margin-top: 380px;
+}
+
+.bottom-block{
+    height: 130px;
+    background-color: rgb(0,99,65);
+}
+
+.bottom-left{
+     float: left;
+     margin-left: 40px;
+     margin-top: 80px;
+     color: white;
+     font-family: "Helvetica Custom";
+     font-weight: 300;
+ }
+
+.bottom-right{
+    float: right;
+    margin-right: 40px;
+    margin-top: 20px;
+    color: white;
+    font-family: "Helvetica Custom";
+    font-weight: 300;
+}
+
+.btn-custom{
+    border-radius: 0px;
+    background-color: rgb(0,99,65);
+    height: 40px;
+    width: 150px;
+    font-size: 20px;
+    color: rgb(255,255,255);
+    font-family: "Helvetica Custom";
+    font-weight: 700;
+    letter-spacing: 1px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    transition: background-color, color, box-shadow, .5s;
+}
+
+.btn-custom:hover {
+    color: white;
+    border-color: white;
+    background-color: rgba(255,255,255,0);
+    box-shadow: none;
+}
+
+.blog-header {
+    font-family: "Helvetica Custom";
+    font-weight: bold;
+    text-align: center;
+}
+
+.blog-text {
+    font-family: "Tahoma";
+    font-weight: normal;
+}
+
+.blog{
+    background-color: white;
+    width: 30vw;
+    box-shadow: 0 0 5px rgba(0,0,0,0.5);
+    float: left;
+    transition: box-shadow, .5s;
+    margin: 20px;
+}
+
+.blog:hover {
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.blog-head {
+    text-align: center;
+    font-family: "Helvetica Custom";
+    font-weight: 100;
+    color: black;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.blog-head:hover {
+    text-decoration: none;
+    font-weight: bold;
+    color: rgb(0,99,65);
 }
