--- a/my.css
+++ b/my.css
@@ -16,7 +16,7 @@
     src: url(/static/HelveticaNeueCyr-UltraLight.otf);
 }
 
-.img {
+/*.img {
     background: url("static/main1.jpg") no-repeat center top;
     background-size: cover;
     width: 100vw;
@@ -27,21 +27,54 @@
     width: 100%;
     height: 100%;
     background: rgba(139,90,43,0.3);
+}*/
+
+.header-text-custom{
+    font-family: "Helvetica Custom";
+    color: rgba(58,57,66,1);
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.header-text-custom:hover{
+    text-decoration: none;
+    color: rgba(58,57,66,1);
+}
+
+.background-custom {
+    background: rgba(240, 240, 245, 1);
+    width: 100vw;
+    height: 100vh;
 }
 
 .navbar {
-    background-color: rgba(255,255,255,0);
+    background-color: rgba(255,255,255,1);
+    height: 70px;
     border-radius: 0px;
     border: hidden;
+    box-shadow: 0 0 5px rgba(0,0,0,0.1);
 }
 
 .maintext {
     font-family: "Helvetica Custom";
-    text-align: center;
-    padding-top: 10vh;
-    color: white;
-    font-size: 80px;
-    font-weight: 100;
+    text-align: left;
+    padding-top: 25vh;
+    color: rgba(58,57,66,1);
+    font-size: 54px;
+    font-weight: 700;
+    margin-left: 80px;
+    line-height: 80px;
+}
+
+.maintext-sm {
+    font-family: "Helvetica";
+    text-align: left;
+    padding-top: 25vh;
+    color: rgba(58,57,66,1);
+    font-size: 24px;
+    font-weight: 300;
+    margin-left: 80px;
+    line-height: 30px;
 }
 
 .navbar-brand {
@@ -50,29 +83,73 @@
     font-size: 40px;
 }
 
+.under-right-panel-csm{
+    position:absolute;
+    margin-top: 280px;
+    margin-left: 150px;
+    width: 25vw;
+    height: 50vh;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
+
+.right-panel-csm {
+    position: relative;
+    background-color: white;
+    border-radius: 5px;
+    width: 30vw;
+    height: 70vh;
+    margin-top: 140px;
+    margin-left: 120px;
+    text-align: center;
+    padding-top: 20px;
+
+}
+
+.right-panel-csm > h3 {
+    font-family: "Helvetica Custom";
+    font-weight: 700;
+    font-size: 25px;
+}
+
+.input-csm{
+    width: 20vw;
+    height: 50px;
+    border: 0px;
+    background-color: rgba(240,240,240,0.5);
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 25px;
+    font-family: "Helvetica Custom";
+    font-weight: 700;
+    font-size: 15px;
+    letter-spacing: 2px;
+}
+
 .toptext {
     font-family: "Helvetica Custom";
     font-weight: 700;
     font-size: 20px;
-    margin-top: 5px;
+    margin-top: 13px;
 }
 
 .navbar-default .navbar-nav > li > a {
     color: #000;
 }
 
+
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color: #ffffff;
+    color: #aaaaaa;
     background-color: transparent;
 }
 
-.followers-block {
-    margin-top: -20px;
+/*.followers-block {
+    margin-top: 0px;
     width: 100vw;
     height: 250px;
     /*background: rgb(139,69,19);*/
-    background: rgb(0,99,65);
+    /*background: rgb(0,99,65);*/
+ /*   background: white;
 }
 
 .followers-header {
@@ -91,12 +168,12 @@
 
 .followers-icons:hover {
     height: 60px;
-}
+}*/
 
 .products-block {
-    margin-top: -20px;
+    margin-top: 50px;
     width: 100vw;
-    height: 600px;
+    height: 550px;
 }
 
 a.products-block {
@@ -111,23 +188,32 @@ a.products-block:hover {
     font-family: "Helvetica Custom";
     text-align: center;
     padding-top: 40px;
-    color: black;
+    color: rgba(58,57,66,1);
     font-size: 50px;
-    font-weight: 100;
+    font-weight: 700;
     margin-bottom: 40px;
 }
 
 .light_div {
-    background-color: rgba(220, 220, 220, 0.3);
+    /*background-color: rgba(220, 220, 220, 0.3);*/
     height: 400px;
     text-align: center;
 }
 
+.light_div:hover {
+    box-shadow: 0 0 30px rgba(200,200,200, 0.2);
+}
+
 .dark_div {
-    background-color: rgba(211, 211, 211, 0.4);
+    /*background-color: rgba(211, 211, 211, 0.4);*/
     height: 400px;
     text-align: center;
 }
+
+.dark_div:hover{
+    box-shadow: 0 0 15px rgba(200,200,200, 0.2);
+}
+
 
 .products-icon {
     height: 150px;
@@ -147,27 +233,42 @@ a.products-block:hover {
 }
 
 .saying-block {
-    height: 500px;
+    margin-top: 50px;
+    height: 1050px;
+    background: white;
 }
 
 .saying-header {
     font-family: "Helvetica Custom";
     text-align: center;
-    color: black;
+    color: rgba(58,57,66,1);
     font-size: 50px;
-    font-weight: 100;
+    font-weight: 700;
 }
 
 .saying-icon {
-    height: 100px;
-    width: 100px;
+    height: 150px;
+    width: 150px;
     border-radius: 100px;
 }
 
+.saying-social-icon{
+    margin-top: 20px;
+    height: 30px;
+}
+
 .saying-text {
-    font-family: "Helvetica Custom";
-    font-weight: 300;
-    font-size: 20px;
+    font-family: "Helvetica";
+    font-weight: 100;
+    font-size: 18px;
+    line-height: 25px;
+}
+
+.saying-text-name {
+    font-family: "Helvetica";
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
 }
 
 .comp-block {
@@ -183,21 +284,21 @@ a.products-block:hover {
 
 .personal-block{
     height: 150px;
-    background-color: rgba(211, 211, 211, 0.4);
+    background-color: white;
     margin-top: 380px;
 }
 
 .bottom-block{
     height: 130px;
-    background-color: rgb(0,99,65);
+    background-color: white;
 }
 
 .bottom-left{
      float: left;
      margin-left: 40px;
      margin-top: 80px;
-     color: white;
-     font-family: "Helvetica Custom";
+     color: rgba(58,57,66,1);
+     font-family: "Helvetica";
      font-weight: 300;
  }
 
@@ -205,14 +306,15 @@ a.products-block:hover {
     float: right;
     margin-right: 40px;
     margin-top: 20px;
-    color: white;
-    font-family: "Helvetica Custom";
+    color: rgba(58,57,66,1);
+    font-family: "Helvetica";
     font-weight: 300;
 }
 
 .btn-custom{
-    border-radius: 0px;
-    background-color: rgb(0,99,65);
+    border-radius: 3px;
+    background-color: rgb(68,157,47);
+    margin-top: 7px;
     height: 40px;
     width: 150px;
     font-size: 20px;
@@ -220,13 +322,12 @@ a.products-block:hover {
     font-family: "Helvetica Custom";
     font-weight: 700;
     letter-spacing: 1px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.5);
     transition: background-color, color, box-shadow, .5s;
 }
 
 .btn-custom:hover {
-    color: rgb(0,99,65);
-    border-color: rgb(0,99,65);
+    color: rgb(68,157,47);
+    border-color: rgb(68,157,47);
     background-color: rgba(255,255,255,0);
     box-shadow: none;
 }
@@ -329,25 +430,29 @@ p.tag {
 }
 
 .product {
-    margin-top: 80px;
+    margin-top: 70px;
+    padding-top: 80px;
 }
 
 .product > h1{
-    text-align: center;
-    font-family: "Helvetica Custom";
-    font-weight: 100;
-    color: black;
+    font-family: "Helvetica";
+    font-weight: 300;
+    color: rgba(58,57,66,1);
     font-size: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    margin-left: 10vw;
 }
 
-.product > h2{
-    text-align: center;
+.product h2{
+
     font-family: "Helvetica";
-    font-weight: 500;
-    color: black;
+    font-weight: 100;
+    color: rgba(58,57,66,1);
     font-size: 30px;
     margin-bottom: 20px;
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .product > div > p{
@@ -358,8 +463,17 @@ p.tag {
     font-size: 18px;
 }
 
-.product > h3{
+.product h3{
+
     font-family: "Helvetica";
+    font-weight: 300;
+    color: rgba(58,57,66,1);
+    font-size: 16px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+    margin-left: 30px;
+    margin-right: 30px;
+    line-height: 25px;
 }
 
 .product > div > ul{
@@ -369,5 +483,15 @@ p.tag {
     color: black;
     font-size: 18px;
 }
+
+.under-panel{
+    position:absolute;
+    margin-top: 348px;
+    margin-left: 160px;
+    width: 30vw;
+    height: 50vh;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3);
+}
+
 
 
